[gd_scene load_steps=7 format=2]

[node name="Demo" type="Node"]
script = ExtResource( 1 )

[node name="BattleController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Player" type="Node2D" parent="BattleController"]
script = ExtResource( 3 )

[node name="Enemy" type="Node2D" parent="BattleController"]
script = ExtResource( 4 )
[node name="EnemyAI" type="Node" parent="BattleController/Enemy"]
script = ExtResource( 6 )

[node name="UI" type="Control" parent="BattleController"]
script = ExtResource( 5 )
[node name="StatusEffectManager" type="Node" parent="BattleController"]
script = ExtResource( 7 )

[ext_resource path="res://high_kick_hell/demo/demo_scene.gd" type="Script" id=1]
[ext_resource path="res://high_kick_hell/BattleController.gd" type="Script" id=2]
[ext_resource path="res://high_kick_hell/Player.gd" type="Script" id=3]
[ext_resource path="res://high_kick_hell/Enemy.gd" type="Script" id=4]
[ext_resource path="res://high_kick_hell/UI.gd" type="Script" id=5]
[ext_resource path="res://high_kick_hell/EnemyAI.gd" type="Script" id=6]
[ext_resource path="res://high_kick_hell/StatusEffectManager.gd" type="Script" id=7]

